--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="/img/DEV.png">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="style/index.css" type="text/css" rel="stylesheet">
@@ -54,14 +55,14 @@
         </div>
 
         <div class="col-sm-4"></div>
-        <div class="pedro col-sm-4" style="margin-top:90px;">
+        <div class="pedro col-sm-4 text-center" style="margin-top:90px;">
             <div class="borda1"><img runat="server" class="perfil" src="img/perfilof.png" /></div>
         </div>
     </div>
     <div class="container text-left" style="margin-top:30px;">
         <div style="color:white;font-family: 'Secular One', sans-serif;">
             <div class="col-sm-1"></div>
-            <div class="col-sm-3">
+            <div class="col-sm-3 text-center">
                 <img runat="server" class="notebook" src="img/desktop.png" width="355" />
             </div>
             <div class="col-sm-1"></div>
