--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="style/index.css" type="text/css" rel="stylesheet">
+    <link href="/style/navbar.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
@@ -181,6 +182,6 @@
     </main>
     
 
-    <script src="/script/index.js"></script>
+    <script src="/script/navbar.js"></script>
 </body>
 </html>
