--- a/pages/orcamento.html
+++ b/pages/orcamento.html
@@ -76,6 +76,12 @@
                 </div>
             </div>
         </div>
+
+        <footer class="text-center" style="color:white; margin-top:50px;">
+            <p>Todos os direitos reservados</p>
+            <p><b>Termos de privacidade – Todos os direitos reservados – Termos de Uso</b></p>
+        </footer>
+        
     </main>
     <script src="/script/navbar.js"></script>
 </body>
