--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -32,14 +32,14 @@
     </header>
 
     <main>
-        <div class="container" style="margin-top:90px;">
+        <div class="container" style="margin-top:5vh">
             <div class="row">
                 <div class="col-sm-5" style="font-family: 'Secular One', sans-serif; ">
                     <h1 class="text-left"><a style="color:#03CFB0; text-decoration:none;">Habilidades</a> e <a style="color:#8F3EF4; text-decoration:none;">Áreas</a> de <a style="color:#8F3EF4; text-decoration:none;">Conhecimento</a></h1>
                     <p class="text-left" style="font-size:20px; margin-top:30px;">Um desenvolvedor têm que saber de tudo um pouco. Um pouco da parte Web, do Frontend e do Backend, de layout e de estruturação de códigos. </p>
     
-                    <p class="text-left" style="margin-top:90px;">*Clique em cima das tecnologias</p>
-                    <div>
+                    <p class="center-block" style="margin-top:90px;">*Clique em cima das tecnologias</p>
+                    <div class=" text-center">
                         <input type="button" class="tecnologias" id="btnHtml" value="HTML/CSS" />
                         <input type="button" class="tecnologias" id="btnJavascript" value="Javascript" />
                         <input type="button" class="tecnologias" id="btnC" value="C#" />
@@ -48,16 +48,16 @@
                         <input type="button" class="tecnologias" id="btnGit" value="Git" />
                         <input type="button" class="tecnologias" id="btnFigma" value="Figma" />
                     </div>
-                    <div class="center-block" id="div1" style="width:400px; margin-top:30px; border-width:2px; border-style:solid;border-color:#03CFB0; border-radius:3px;">
+                    <div class="center-block text-center habilidades" id="div1">
                         <p style="margin-top:10px;">HTML/CSS</p>
                         <p>Para qualquer site bem estruturado e estilizado é necessário ter uma boa base HTML e uma boa folha de estilos CSS.</p>
                         <ul class="text-left">
-                            <li>Bootstrap</li>
+                            <li>Bootstrap</li>  
                             <li>Principais tags html</li>
                             <li>Principais tags css</li>
                         </ul>
                     </div>
-                    <div class="center-block" id="div2" style="display:none;width:400px; margin-top:30px; border-width:2px; border-style:solid;border-color:#03CFB0; border-radius:3px;">
+                    <div class="center-block text-center habilidades" id="div2">
                         <p style="margin-top:10px;">Javascript</p>
                         <p>A inteligencia de um site por trás da estrutura sem dúvidas é o Javascript, é nele que toda a mágica visual e não visual acontece.</p>
                         <ul class="text-left">
@@ -65,7 +65,7 @@
                             <li>Inserção e administração</li>
                         </ul>
                     </div>
-                    <div class="center-block" id="div3" style="display:none;width:400px; margin-top:30px; border-width:2px; border-style:solid;border-color:#03CFB0; border-radius:3px;">
+                    <div class="center-block text-center habilidades" id="div3">
                         <p style="margin-top:10px;">C#</p>
                         <p>E por trá de todo o processo inteligente do site está uma linguagem Backend, sendo ela a responsavel por manipular dados, registros ou todo o processo.</p>
                         <ul class="text-left">
@@ -73,7 +73,7 @@
                             <li>Parte por trás de todo processo</li>
                         </ul>
                     </div>
-                    <div class="center-block" id="div4" style="display:none;width:400px; margin-top:30px; border-width:2px; border-style:solid;border-color:#03CFB0; border-radius:3px;">
+                    <div class="center-block text-center habilidades" id="div4">
                         <p style="margin-top:10px;">Python</p>
                         <p>Python também é uma linguagem Backend, sendo umas das linguagens mais utilizadas do mundo atualmente.</p>
                         <ul class="text-left">
@@ -81,7 +81,7 @@
                             <li>Criação de Bot/Automações</li>
                         </ul>
                     </div>
-                     <div class="center-block" id="div5" style="display:none;width:400px; margin-top:30px; border-width:2px; border-style:solid;border-color:#03CFB0; border-radius:3px;">
+                     <div class="center-block text-center habilidades" id="div5">
                         <p style="margin-top:10px;">Sql/MySql</p>
                         <p>Sem dúvidas uma boa base de dados é fundamental para uma aplicação que envolva almazenagem de dados.</p>
                         <ul class="text-left">
@@ -90,7 +90,7 @@
                             <li>Script</li>
                         </ul>
                     </div>
-                    <div class="center-block" id="div6" style="display:none;width:400px; margin-top:30px; border-width:2px; border-style:solid;border-color:#03CFB0; border-radius:3px;">
+                    <div class="center-block text-center habilidades" id="div6">
                         <p style="margin-top:10px;">Git</p>
                         <p>Um programador sem o Git é a mesma coisa que um carro sem a chave.</p>
                         <ul class="text-left">
@@ -99,7 +99,7 @@
                             <li>Branchs</li>
                         </ul>
                     </div>
-                    <div class="center-block" id="div7" style="display:none;width:400px; margin-top:30px; border-width:2px; border-style:solid;border-color:#03CFB0; border-radius:3px;">
+                    <div class="center-block text-center habilidades" id="div7">
                         <p style="margin-top:10px;">Figma</p>
                         <p>E para um desenvolvedor Frontend sem dúvidas umas das melhores ferramentas é de designer é o Figma.</p>
                         <ul class="text-left">
@@ -110,8 +110,8 @@
                     </div>
                 </div>
                 <div class="col-sm-2"></div>
-                <div class="col-sm-5">
-                    <img runat="server" src="../img/pronto.png" width="400" />
+                <div class="col-sm-5 text-center">
+                    <img src="../img/pronto.png" width="400" />
                 </div>
             </div>
         </div>  
