Correção responsividade index tablet

--- a/pages/orcamento.html
+++ b/pages/orcamento.html
@@ -43,9 +43,9 @@
             <div class="row">
                 <div class="col-sm-4">
                     <h3 style="font-size:30px; margin-bottom:30px;">Descreva para mim o que precisa:</h3>
-                    <p style="font-size:15px; text-align:left; margin-bottom:25px;"><img runat="server" src="../img/seta.png" width="30" />Descreva o máximo que conseguir, assim conseguimos retornar com mais agilidade</p>
-                    <p style="font-size:15px; text-align:left; margin-bottom:25px;"><img runat="server" src="../img/seta.png" width="30" />Se for um site descreva como deve ser na sua mente. Funcionalidades, layout, cores, se vai possuir vídeos e etc...</p>
-                    <p style="font-size:15px; text-align:left; margin-bottom:25px;"><img runat="server" src="../img/seta.png" width="30" />Se for uma automação descreva o que precisa automatizar em detalhes, se é site que obriga a fazer login, obriga a mexer com relatório, excel e etc...</p>
+                    <p style="font-size:15px; text-align:left; margin-bottom:25px;"><img  src="../img/seta.png" width="30" />Descreva o máximo que conseguir, assim conseguimos retornar com mais agilidade</p>
+                    <p style="font-size:15px; text-align:left; margin-bottom:25px;"><img  src="../img/seta.png" width="30" />Se for um site descreva como deve ser na sua mente. Funcionalidades, layout, cores, se vai possuir vídeos e etc...</p>
+                    <p style="font-size:15px; text-align:left; margin-bottom:25px;"><img  src="../img/seta.png" width="30" />Se for uma automação descreva o que precisa automatizar em detalhes, se é site que obriga a fazer login, obriga a mexer com relatório, excel e etc...</p>
                 </div>
                 <div class="col-sm-2"></div>
                 <div class="col-sm-6" style="margin-top:40px;">
@@ -70,7 +70,7 @@
                             <div class="col-sm-12 text-center">
                                 <button class="botao" id="btnEnviar">Pedir Orçamento</button>
                             </div>
-                            <asp:Label runat="server" ID="lblData" Visible="false"></asp:Label>
+                            <asp:Label  ID="lblData" Visible="false"></asp:Label>
                         </div>
                     </div>
                 </div>
