Salvando alteração de responsividade

--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
                 <div class="col-sm-12 text-center"><h3 style="text-transform:uppercase;font-family: 'Secular One', sans-serif; font-size:20px; color:white; margin-bottom:10px;">Trabalhos recentes</h3></div>
                 <div class="col-sm-12 text-center"><p style="font-family: 'Secular One', sans-serif; font-size:15px; color:white; margin-bottom:30px;">Alguns dos meus <a style="color:#03CFB0;">trabalhos</a> mais <a style="color:#8F3EF4;">recentes</a>. Trabalhos que você poderá fazer o <a style="color:#03CFB0;">download</a> e testar 😀</p></div>
     
-                <div class="linha1 row center-block">
+                <div class="linha1 row center-block text-center">
                     <a href="#"><div class="recentes quadro1 img1 col-sm-4" style="background-image:url(img/Python.png);"></div></a>
                     <a href="https://github.com/PedroPro212/Formulario-Perguntas" target="_blank"><div class="recentes quadro2 col-sm-4" style="background-image:url(img/PESQUISA.png);"></div></a>
                     <a href="#"><div class="recentes quadro3 col-sm-4" style="background-image:url(img/excel.png);"></div></a>
     
                 </div>
                 <div class="col-sm-12" style="margin-top:10px;"></div>
-                <div class="linha2 row">
+                <div class="linha2 row text-center">
                     <div class="recentes quadro4 col-sm-4" style="background-image:url(img/crud.png);"></div>
                     <div class="recentes quadro5 col-sm-4" style="background-image:url(img/meusite.png);"></div>
                     <div class="recentes quadro6 col-sm-4" style="background-image:url(img/JAVASC.png);"></div>
