Criação banner index

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         </nav>
     </header>
     <main>
+
+        <div class="banner col-sm-12">
+            
+        </div>
+
         <div class="container text-left">
             <div class="col-sm-4" style="color:white; font-family: 'Secular One', sans-serif;">
                 <a href="/pages/habilidades.html"><input type="button" class="buton" value="Hablidades"></a>
@@ -39,15 +44,15 @@
                 <img  src="img/phone.png" width="22" style="float:left; margin-right:5px;" /><p style="text-align:left;">+55 (35) 997444848</p>
                 <img  src="img/email.png" width="22" style="float:left; margin-right:5px;" /><p style="text-align:left;">desenvolvedordesistemas22@gmail.com</p>
                 <div class="mini_logos row" style="margin-left:0px; margin-top:10px;">
-                    <a href="https://www.instagram.com/pedro_code_212/" target="_blank"><img  src="img/instagram.png" width="24" /></a>
-                    <a href="https://www.linkedin.com/in/pedro-oliveira-b820811b4/" target="_blank"><img  src="img/linkedin.png" width="24" /></a>
-                    <a href="https://github.com/PedroPro212" target="_blank"><img  src="img/github.png" width="24" /></a>
+                    <a href="https://www.instagram.com/pedro_code_212/" target="_blank"><img  src="img/instagram.png" alt="Instagram" width="24" /></a>
+                    <a href="https://www.linkedin.com/in/pedro-oliveira-b820811b4/" target="_blank"><img  src="img/linkedin.png" alt="Linkedin" width="24" /></a>
+                    <a href="https://github.com/PedroPro212" target="_blank"><img  src="img/github.png" alt="GitHub" width="24" /></a>
                 </div>
             </div>
     
             <div class="col-sm-4"></div>
             <div class="pedro col-sm-4 text-center" style="margin-top:90px;">
-                <div class="borda1"><img  class="perfil" src="img/perfilof.png" /></div>
+                <div class="borda1"><img  class="perfil" src="img/perfil2.webp" alt="Foto de Perfil" /></div>
             </div>
         </div>
         <div class="container text-left" style="margin-top:30px;">
