--- a/index.html
+++ b/index.html
@@ -64,14 +64,7 @@
                 <div class="col-sm-1"></div>
                 <div class="escrita col-sm-6">
                     <h3 style="margin-bottom:15px; filter:drop-shadow(black 2px 2px 2px)">Follow me</h3>
-                    <div style="width:80%; font-size:15px;"><p>Olá. Meu nome é Pedro, sou Desenvolvedor de Sistemas. Atuo principalmente na Web, com HTML, CSS,  JavasCript, C#, Python e entre outras tecnologias....</p></div>
-                    <div class="botoesGeral">
-                        <asp:Button  Text="HTML" CssClass="botoes" />
-                        <asp:Button  Text="C#" CssClass="botoes" />
-                        <asp:Button  Text="Python" CssClass="botoes" />
-                        <asp:Button  Text="WebForms" CssClass="botoes" />
-                        <asp:Button  Text="WindowsForms" CssClass="botoes botoes_WindowsForms" />
-                    </div>
+                    <div style="width: 80%;font-size:15px;"><p>Olá. Meu nome é Pedro, sou Desenvolvedor de Sistemas. Atuo principalmente na Web, com HTML, CSS,  JavasCript, C#, Python e entre outras tecnologias....</p></div>
                     <div class="download"><a style="text-decoration:none; color:white; filter:drop-shadow(black 2px 2px 2px);" href="img/Curriculo.pdf" target="_blank">Download Currículo <img  src="img/download.png" width="22" /></a></div>
                 </div>
             </div>
@@ -172,7 +165,7 @@
             <div class="col-sm-6">
                 <div class="precisa center-block">
                     <h3>Precisa de um sistema? Site, programa ou automação/bot?</h3>
-                    <a href="Orcamento.aspx"><div class="orcamento">
+                    <a href="/pages/orcamento.html"><div class="orcamento">
                         <p style="text-transform:uppercase; color:white; text-align:center; padding-top:10px;">Se sim, clique aqui</p>
                     </div></a>
                 </div>
