--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
         </div>
     
         <div class="container-fluid fundo" style="display: flex;margin-top:80px;">
+            <div class="row">
+                <h1>Dev</h1>
+                <h2>Full Stack</h2>   
+            </div>
+
             <img class="apresentacao"src="/img/apresentacao.png" height="579">
         </div>
     
