--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h6 style="margin-bottom:20px;">Desenvolvedor de Sistemas</h6>
                 <img  src="img/map.png" width="22" style="float:left; margin-right:5px;" /><p style="text-align:left;">Paraisópolis Mg, Brasil</p>
                 <img  src="img/phone.png" width="22" style="float:left; margin-right:5px;" /><p style="text-align:left;">+55 (35) 997444848</p>
-                <img  src="img/email.png" width="22" style="float:left; margin-right:5px;" /><p style="text-align:left;">desenvolvedordesistemas22@gmail.com</p>
+                <img  src="img/email.png" width="22" style="float:left; margin-right:5px;" /><p style="text-align:left;">pedro@programacaodiaria.com.br</p>
                 <div class="mini_logos row" style="margin-left:0px; margin-top:10px;">
                     <a href="https://www.instagram.com/pedro_code_212/" target="_blank"><img  src="img/instagram.png" alt="Instagram" width="24" /></a>
                     <a href="https://www.linkedin.com/in/pedro-oliveira-b820811b4/" target="_blank"><img  src="img/linkedin.png" alt="Linkedin" width="24" /></a>
@@ -143,6 +143,14 @@
             <div class="row">
                 <h1>Dev</h1>
                 <h2>Full Stack</h2>   
+                <p style="font-size: 20px;">
+                    Sempre buscando aperfeiçoar meus talentos como desenvolvedor. Minhas linguagens principais é sem dúvidas C# e JavaScript, mas também programo em NodeJs e Python. 
+                </p>
+                <div style="margin-top:5vh">
+                    <img src="/img/LogoHtml.svg" class="imgLogosLing" width="128" style="margin-right: 3vh;">
+                    <img src="/img/LogoJavascript.svg" class="imgLogosLing" width="128">
+                </div>
+
             </div>
 
             <img class="apresentacao"src="/img/apresentacao.png" height="579">
