--- a/pages/orcamento.html
+++ b/pages/orcamento.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="/style/orcamento.css" type="text/css" rel="stylesheet">
     <link href="/style/navbar.css" type="text/css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 
@@ -51,26 +52,18 @@
                 <div class="col-sm-6" style="margin-top:40px;">
                     <div class="container">
                         <div class="quadro">
-                            <div class="col-sm-5" style="margin-left:28px; margin-top:30px;">
-                                <input type="text" class="txts nome" placeholder="Nome:">
-                                <input type="email" class="txts email" placeholder="Email:">
-                                <textarea class="descricao" id="txadescricao" cols="40" ForeColor="Black" placeholder="Descrição:" style="color:black;"></textarea>
-                            </div>
-                            <div class="col-sm-2"></div>
-                            <div class="col-sm-4 text-center teste">
-                                <input type="text" class="txts telefone" placeholder="Tel: 35997444848">
-                                <select name="select" class="Opcao" id="sltOpcoes">
-                                    <option value="">Escolha</option>
-                                    <option value="WebSite">WebSite</option>
-                                    <option value="LojaOnline">Loja Online</option>
-                                    <option value="Programa">Programa</option>
-                                    <option value="Automacao">Automação</option>
-                                </select>
-                            </div>
-                            <div class="col-sm-12 text-center">
-                                <button class="botao" id="btnEnviar">Pedir Orçamento</button>
-                            </div>
-                            <asp:Label  ID="lblData" Visible="false"></asp:Label>
+                            <form id="contact-form" style="color:black">
+                                <label for="name">Nome:</label>
+                                <input type="text" id="name" name="name" required>
+
+                                <label for="email">Email</label>
+                                <input type="text" id="email" name="email" required>
+
+                                <label for="message">Mensagem:</label>
+                                <textarea id="message" name="message" required></textarea>
+
+                                <button type="submit">Enviar</button>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -83,6 +76,38 @@
         </footer>
         
     </main>
+
     <script src="/script/navbar.js"></script>
+    <script src="/script/email.js"></script>
+
+    <script>
+        $('#contact-form').submit(function(event){
+            event.preventDefault();
+
+            const name = $('#name').val();
+            const email = $('#email').val();
+            const message = $('#message').val();
+
+            // Envia a solicitação por AJAX
+            $.ajax({
+                url: '/send',
+                type: "POST",
+                data: {
+                    name: name,
+                    email: email,
+                    message: message
+                },
+                success: function(response){
+                    console.log(response);
+                    alert('E-mail enviado com sucesso!');
+                },
+                error: function(error){
+                    console.log(error);
+                    alert('Ocorreu um erro ao enviar o e-mail.')
+                }
+            });
+        });
+    </script>
+
 </body>
 </html>
