--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <ul class="nav-list">
             <li><a href="/index.html">Início</a></li>
             <li><a href="/pages/habilidades.html">Habilidades</a></li>
-            <li><a href="/pages/orcamento.html">Orçamento</a></li>
+            <li><a href="/pages/orcamento.php">Orçamento</a></li>
             <li><a href="/pages/contato.html">Contato</a></li>
           </ul>
         </nav>
