Style tela de orçamento

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
     
         <div class="container-fluid fundo" style="display: flex;margin-top:80px;">
             <div class="row">
-                <h1>Developer</h1>
-                <h2></h2>   
+                <h1>Dev</h1>
+                <h2>Full Stack</h2>   
                 <p style="font-size: 20px;">
                     Sempre buscando aperfeiçoar meus talentos como desenvolvedor. Minhas linguagens principais é sem dúvidas C# e JavaScript, mas também programo em C++ e Python. 
                 </p>
