backend conferir número

--- a/adm/login/codigo.html
+++ b/adm/login/codigo.html
@@ -17,7 +17,7 @@
             <img src="/img/code.png" alt="Logo código" width="50" style="margin-top:2vh">
             <h3>Somente para ADMS</h3>
             <div class="center" id="form">
-                <form action="../../php/login.php" method="post" class="text-center">
+                <form action="../../php/login/validar.php" method="post" class="text-center">
                     <input type="text" class="txtBox center-block" id="txt1" name="txt1" required>
                     <input type="text" class="txtBox center-block" id="txt2" name="txt2" required>
                     <input type="text" class="txtBox center-block" id="txt3" name="txt3" required>
