--- a/adm/login/login.html
+++ b/adm/login/login.html
@@ -17,7 +17,7 @@
             <img src="/img/code.png" alt="Logo código" width="50" style="margin-top:2vh">
             <h3>Somente para ADMS</h3>
             <div class="center" id="form">
-                <form action="../../php/login.php" method="post" class="text-left">
+                <form action="../../php/login/login.php" method="post" class="text-left">
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required autocomplete="off">
 
