--- a/index.html
+++ b/index.html
@@ -85,9 +85,18 @@
 
             </div>
     
-            <div class="col-sm-4"></div>
-            <div class="pedro col-sm-4 text-center" style="margin-top:90px;">
-                <!--<div class="borda1"><img  class="perfil" src="img/perfil2.webp" alt="Foto de Perfil" /></div>-->
+            <div class="apresentação-fullstack col-sm-8" style="display: inline;margin-top:90px;">
+                <div class="apresentação-fullstack-front">
+                    Frontend
+                </div>
+
+                <div class="apresentação-fullstack-back">
+                    Backend
+                </div>
+
+                <div class="apresentação-fullstack-bd">
+                    Banco de Dados
+                </div>
             </div>
         </section>
         <section class="container text-left" style="margin-top:30px;">
