--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <nav>
+        <nav style="background-color: #222325d0;">
           <a class="logo" href="/index.html" style="text-decoration: none;">Programação Diária</a>
           <div class="mobile-menu">
             <div class="line1"></div>
@@ -85,17 +85,25 @@
 
             </div>
     
-            <div class="apresentação-fullstack col-sm-8" style="display: inline;margin-top:90px;">
-                <div class="apresentação-fullstack-front">
-                    Frontend
+            <div class="col-sm-2"></div>
+
+            <div class="apresentação-fullstack col-sm-6" style="display: inline;">
+                <div class="apresentação-fullstack-opcoes apresentação-fullstack-front">
+                    <h3>Front-End <img src="img/code.png" alt="</>"></h3>
+                    <p>Eu desenvolvo toda a parte visual do seu site</p>
+                    <a href="#">5 projetos públicos</a>
                 </div>
 
-                <div class="apresentação-fullstack-back">
-                    Backend
+                <div class="apresentação-fullstack-opcoes apresentação-fullstack-back">
+                    <h3>Backend <img src="img/backend.svg" alt="()"></h3>
+                    <p>Também toda a mágica por trás do visual</p>
+                    <a href="#">3 projetos públicos</a>
                 </div>
 
-                <div class="apresentação-fullstack-bd">
-                    Banco de Dados
+                <div class="apresentação-fullstack-opcoes apresentação-fullstack-bd">
+                    <h3>Banco de Dados <img src="img/database.svg" alt="Banco de Dados"></h3>
+                    <p>Sem contar toda a estrutura de dados</p>
+                    <a href="#">2 projetos públicos</a>
                 </div>
             </div>
         </section>
