--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
           </div>
           <ul class="nav-list">
             <li><a href="/index.html">< Início /></a></li>
-            <li><a href="/pages/habilidades.html">Habilidades</a></li>
-            <li><a href="#">Projetos</a></li>
-            <li><a href="/pages/orcamento.php">Orçamento</a></li>
+            <li><a href="pages/habilidades.html">Habilidades</a></li>
+            <li><a href="pages/projetos.html">Projetos</a></li>
+            <li><a href="pages/orcamento.php">Orçamento</a></li>
           </ul>
         </nav>
     </header>
@@ -73,7 +73,7 @@
                 <address>
                     <h1>Pedro Oliveira</h1>
                     <h6 style="margin-bottom:20px;">Desenvolvedor de Sistemas</h6>
-                    <img src="img/map.png" width="22" alt="icon localização" style="float:left; margin-right:5px;" /><p style="text-align:left;">Paraisópolis Mg, Brasil</p>
+                    <img src="img/map.png" width="22" alt="icon localização" style="float:left; margin-right:5px;" /><a href="https://www.google.com/maps/search/?api=1&query=-22.551866,-45.780858" target="_blank"><p style="text-align:left;">Paraisópolis Mg, Brasil</p></a>
                     <img src="img/phone.png" width="22" alt="icon celular" style="float:left; margin-right:5px;" /><p style="text-align:left;">+55 (35) 997444848</p>
                     <img src="img/email.png" width="22"  alt="icon email" style="float:left; margin-right:5px;" /><p style="text-align:left;">contato@programacaodiaria.com.br</p>
                     <div class="mini_logos row" style="margin-left:0px; margin-top:10px;">
