--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -29,15 +29,17 @@
     </header>
 
     <main class="container">
-        <div class="row">
+        <div class="row"> 
             <h1 class="col-sm-12 text-left">Front-End</h1>
             <section class="col-sm-6">
                 <h3>Sidebar</h3>
+                <p>Uma sidebar(menu) para seu site. Desenvolvido utilizando <br> HTML5, CSS3, Javascript, PHP e MySQL</p>
                 <img src="../img/Projeto-1.webp" alt="Sidebar">
             </section>
 
             <section class="col-sm-6">
                 <h3>Tela de Login</h3>
+                <p>Uma tela de login para seu site. Desenvolvido utilizando <br>apenas HTML5, CSS3 e Javascript</p>
                 <img src="../img/projeto-2.webp" alt="Tela de login">
             </section>
         </div>
