--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <ul class="nav-list">
             <li><a href="/index.html">< Início /></a></li>
             <li><a href="pages/habilidades.html">Habilidades</a></li>
-            <li><a href="pages/projetos.html">Projetos</a></li>
+            <!--<li><a href="pages/projetos.html">Projetos</a></li>-->
             <li><a href="pages/orcamento.php">Orçamento</a></li>
           </ul>
         </nav>
@@ -42,11 +42,11 @@
                         <a href="https://wa.me/+5535997444848" target="_blank"><u>Vamos aos negócios!</u></a>
 
                         <div class="banner-project" style="display: flex; text-transform: uppercase;">
-                            <div class="banner-project-anos" style="display: flex;">
+                            <div class="banner-project-anos">
                                 <span>+2</span><p>Anos<br>Experiência </p>
                             </div>
 
-                            <div class="banner-project-project" style="display: flex;">
+                            <div class="banner-project-project">
                                 <span>40</span><p>Projetos completados<br>em 1 ano</p>
                             </div>
                         </div>
