--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -118,7 +118,7 @@
         
         <footer class="text-center" style="color:white; margin-top:50px;">
             <p>Todos os direitos reservados</p>
-            <p><b>Termos de privacidade – Todos os direitos reservados – Termos de Uso</b></p>
+            <p><b>Termos de privacidade – Todos os direitos reservados – Termos de Uso </br> <time data="2023">2023</time></b></p>
         </footer>
         
     </main>
