--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                             </div>
 
                             <div class="banner-project-project">
-                                <span>40</span><p>Projetos completados<br>em 1 ano</p>
+                                <span>20</span><p>Projetos completados<br>em 1 ano</p>
                             </div>
                         </div>
 
                     </div>
                     <div class="col-sm-6" style="display: flex;">
-
+                        
                         <div class="borda1" style="display: flex;">
                             <div class="banner-fundo-imageCSHARP"><img src="img/csharp.svg" alt="C#" width="50"></div>
                             <div class="banner-fundo-imageJS"><img src="img/javascript.svg" alt="JavaScript" width="55"></div>
@@ -77,7 +77,7 @@
                     <img src="img/phone.png" width="22" alt="icon celular" style="float:left; margin-right:5px;" /><p style="text-align:left;">+55 (35) 997444848</p>
                     <img src="img/email.png" width="22"  alt="icon email" style="float:left; margin-right:5px;" /><p style="text-align:left;">contato@programacaodiaria.com.br</p>
                     <div class="mini_logos row" style="margin-left:0px; margin-top:10px;">
-                        <a href="https://www.instagram.com/pedropro212/" target="_blank"><img  src="img/instagram.png" alt="Instagram" width="24" /></a>
+                        <a href="https://www.instagram.com/programacao_diaria/" target="_blank"><img  src="img/instagram.png" alt="Instagram" width="24" /></a>
                         <a href="https://www.linkedin.com/in/pedro-oliveira-b820811b4/" target="_blank"><img  src="img/linkedin.png" alt="Linkedin" width="24" /></a>
                         <a href="https://github.com/PedroPro212" target="_blank"><img  src="img/github.png" alt="GitHub" width="24" /></a>
                     </div>
