--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -124,6 +124,6 @@
     </main>
     
     <script src="/js/habilidades.js"></script>
-    <script src="/js/navbar.js"></script>
+    <script src="../config/navbar.js"></script>
 </body>
 </html>
