--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="style/index.css" type="text/css" rel="stylesheet">
     <link href="config/navbar.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="/style/mapa.css">
 </head>
 <body>
 
@@ -196,10 +197,10 @@
                 <h1>Dev</h1>
                 <h2>Full Stack</h2>   
                 <p style="font-size: 20px;">
-                    Sempre buscando aperfeiçoar meus talentos como desenvolvedor. Minhas linguagens principais é sem dúvidas C# e JavaScript, mas também programo em C++ e Python. 
+                    Sempre buscando aperfeiçoar meus talentos como desenvolvedor. Minhas linguagens principais é sem dúvidas C#, JavaScript e PHP. Mas também programo em C++ e Python. 
                 </p>
                 <div style="margin-top:5vh">
-                    <img src="img/LogoHtml.svg" alt="Logo Html" class="imgLogosLing" width="128" style="margin-right: 3vh;">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="Logo React" class="imgLogosLing" width="128" style="margin-right: 3vh;">
                     <img src="img/LogoJavascript.svg" alt="Logo JavaScript" class="imgLogosLing" width="128">
                 </div>
 
