--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -21,9 +21,9 @@
             </div>
             <ul class="nav-list">
                 <li><a href="/index.html">Início</a></li>
-                <li><a href="pages/habilidades.html">Habilidades</a></li>
-                <li><a href="pages/projetos.html">< Projetos /></a></li>
-                <li><a href="pages/orcamento.php">Orçamento</a></li>
+                <li><a href="/pages/habilidades.html">Habilidades</a></li>
+                <li><a href="/pages/projetos.html">< Projetos /></a></li>
+                <li><a href="/pages/orcamento.php">Orçamento</a></li>
             </ul>
         </nav>
     </header>
