--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="style/index.css" type="text/css" rel="stylesheet">
     <link href="config/navbar.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" href="style/animacao.css">
+    <link rel="stylesheet" href="style/animacao/animacao.css">
 </head>
 <body>
 
