--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="../style/projetos.css" type="text/css" rel="stylesheet">
     <link href="../config/navbar.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="../style/animacao/animaProjetos.css">
 </head>
 <body>
     <header>
@@ -30,43 +31,43 @@
 
     <main class="container">
         <div class="row text-center"> 
-            <h1 class="col-sm-12 text-left">Front-End</h1>
-            <section class="col-sm-6">
+            <h1 class="col-sm-12 text-left hiddenn1">Front-End</h1>
+            <section class="col-sm-6 hiddenn1">
                 <h3>Portfólio</h3>
                 <p>Todo esse portfólio foi desenvolvido por mim. <br>Utilizando HTML5, CSS3, javascript e PHP.</p>
                 <img src="../img/3.png" alt="Portfólio">
             </section>
-            <section class="col-sm-6">
+            <section class="col-sm-6 hiddenn2">
                 <h3>Tela de Login</h3>
                 <p>Uma tela de login para seu site. Desenvolvido utilizando <br>apenas HTML5, CSS3 e Javascript.</p>
                 <img src="../img/2.png" alt="Tela de login">
             </section>
 
-            <section class="col-sm-6">
+            <section class="col-sm-6 hiddenn1">
                 <h3>Sidebar</h3>
                 <p>Uma sidebar(menu) para seu site. Desenvolvido utilizando <br> HTML5, CSS3, Javascript, PHP e MySQL.</p>
                 <img src="../img/Projeto-1.webp" alt="Sidebar" style="margin-top: 5rem;">
             </section>
-            <section class="col-sm-6">
+            <section class="col-sm-6 hiddenn2">
                 <h3>Converter Letras</h3>
                 <p>Um sistema para converter textos em Maiuscula ou minúsculo. <br> HTML5 (Bootstrap), CSS3 e Javascript.</p>
                 <img src="../img//4.png" alt="Converter">
             </section>
 
-            <h1 class="col-sm-12 text-left">Backend</h1>
-            <section class="col-sm-6">
+            <h1 class="col-sm-12 text-left hiddenn1">Backend</h1>
+            <section class="col-sm-6 hiddenn1">
                 <h3>Sistema de Gestão (Imobiliária)</h3>
                 <p>Um sistema para gerir todos seus clientes e imovéis cadastrados <br> C#, .NET, WindowsForms e MySQL.</p>
                 <img src="../img/5.png" alt="Imobiliária">
             </section>
-            <section class="col-sm-6">
+            <section class="col-sm-6 hiddenn2">
                 <h3>Sistema de Gestão (Metalúrgica)</h3>
                 <p>Um sistema para gerir todo um processo de produção da Matlúrgica. <br> Javascript, HTML5, CSS3, C#, .NET, ASP.NET e MySQL.</p>
                 <img src="../img/6.png" alt="Metalúrgica">
             </section>
 
-            <h1 class="col-sm-12 text-left">App</h1>
-            <section class="col-sm-6">
+            <h1 class="col-sm-12 text-left hiddenn1">App</h1>
+            <section class="col-sm-6 hiddenn1">
                 <h3>App Freelancer</h3>
                 <p>Um aplicativo para se encontrar Freelancers ou postar projetos. <br>Javascript, React-Native, Nest, NodeJS, Firebase.</p>
                 <img src="../img/7.png" alt="Metalúrgica" style="margin-top: 3rem;">
@@ -74,5 +75,6 @@
         </div>
     </main>
     <script src="../config/navbar.js"></script>
+    <script src="../js/animacao/animaProjetos.js"></script>
 </body>
 </html>
