--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             </div>
 
                             <div class="banner-project-project">
-                                <span>20</span><p>Projetos completados<br>em 1 ano</p>
+                                <span>10</span><p>Projetos completados<br>em 1 ano</p>
                             </div>
                         </div>
                     </div>
@@ -109,18 +109,6 @@
             </div>
         </section>
         <section class="container text-left hiddenn" style="margin-top:30px;">
-            <!-- <div style="color:white;font-family: 'Secular One', sans-serif;">
-                <div class="col-sm-1"></div>
-                <div class="col-sm-3 text-center">
-                    <img  class="notebook" src="img/desktop.png" alt="Notebook" width="355" />
-                </div>
-                <div class="col-sm-1"></div>
-                <div class="escrita col-sm-6">
-                    <h3 style="margin-bottom:15px; filter:drop-shadow(black 2px 2px 2px)">Follow me</h3>
-                    <div style="width: 80%;font-size:15px;"><p>Olá. Meu nome é Pedro, sou Desenvolvedor de Sistemas. Atuo principalmente na Web, com HTML, CSS,  JavasCript, C#, Python e entre outras tecnologias....</p></div>
-                    <div class="download"><a style="text-decoration:none; color:white; filter:drop-shadow(black 2px 2px 2px);" href="img/Curriculo.pdf" target="_blank">Download Currículo <img  src="img/download.png" alt="Download" width="22" /></a></div>
-                </div>
-            </div> -->
             <div style="color:white;font-family: 'Roboto Mono', monospace;">
                 <div class="col-sm-12 text-left" style="background-color: #222325d0; padding: 1rem; padding-left: 2rem; margin-bottom: 2rem; border-radius: 0.5rem;">
                     <h3>Hello!!</h3>
@@ -161,7 +149,7 @@
                     <div class="quadro-anim">
                         <img  class="center-block" src="img/school.png" alt="Escola" width="50" />
                         <h3 class="text-center">School</h3>
-                        <p class="textleft">Técnico em Desenvolvimento de Sistemas na instituição Senai. Também tenho alguns certificados na plataforma Udemy, como de C#, React-Native, Python...</p>
+                        <p class="textleft" style="font-family: 'Roboto Mono', monospace;">Técnico em Desenvolvimento de Sistemas na instituição Senai. Também tenho alguns certificados na plataforma Udemy, como de C#, React-Native, Python...</p>
                         <div class="botao_SaibaMais center-block">
                             <a href="#" class="text-center"><p>Saiba mais</p></a>
                         </div>
@@ -173,8 +161,8 @@
                     <div class="quadro-anim">
                         <img  class="center-block" src="img/code.png" alt="Código" width="50" />
                         <h3 class="text-center">Job</h3>
-                        <p class="textleft">Já realizei automações de tarefas com Python, como pegar cotações de moedas e transformas em planilhas diárias atualizadas. Já montei sites....</p>
-                        <div class="botao_SaibaMais center-block">
+                        <p class="textleft" style="font-family: 'Roboto Mono', monospace;">Já realizei automações de tarefas com Python, como pegar cotações de moedas e transformas em planilhas diárias atualizadas. Já montei sites....</p>
+                        <div class="botao_SaibaMais center-block" style="margin-top: 5.3rem;">
                             <a href="https://github.com/PedroPro212" class="text-center"><p>GitHub</p></a>
                         </div>
                     </div>
@@ -184,7 +172,7 @@
                     <div class="quadro-anim">
                         <img  class="center-block" src="img/camera.png" alt="Câmera" width="50" />
                         <h3 class="text-center">Blog</h3>
-                        <p class="textleft">No meu dia a dia, eu costumo fazer algumas postagens relacionadas com programação nas minhas redes sociais para descontrair e auxiliar</p>
+                        <p class="textleft" style="font-family: 'Roboto Mono', monospace; margin-top: 3.9rem;">No meu dia a dia, eu costumo fazer algumas postagens relacionadas com programação nas minhas redes sociais para descontrair e auxiliar</p>
                         <div class="botao_SaibaMais center-block">
                             <a href="https://www.instagram.com/pedropro212/" class="text-center" target="_blank"><p>Instagram</p></a>
                         </div>
@@ -222,7 +210,7 @@
                     <h3>Backend Developer</h3>
                     <p>Sem dúvidas a mágica por trás do Frontend é o Backend, é com ele que toda a mágica acontece</p>
                     <h6>Idiomas que utilizo:</h6>
-                    <p>C#, Javascript, Python, SQL Server, MySql</p>
+                    <p>C#, PHP, Javascript, Python, SQL Server, MySql</p>
                     <h6>Plataformas de Desenvolvimento</h6>
                     <p>WebForms<br />WindowsForms<br />Console</p>
                 </div>
@@ -247,20 +235,29 @@
             <img class="apresentacao hiddenn"src="/img/apresentacao.png" alt="Foto de perfil conteúdo" height="579">
         </section>
     
-        <div class="container hiddenn">
-            <div class="col-sm-3"></div>
-            <div class="col-sm-6">
-                <div class="precisa center-block">
-                    <h3>Precisa de um sistema? Site, programa ou automação/bot?</h3>
-                    <a href="pages/orcamento.php"><div class="orcamento">
-                        <p style="text-transform:uppercase; color:white; text-align:center; padding-top:10px;">Se sim, clique aqui</p>
-                    </div></a>
-                </div>
+        <div class="container-gruid hiddenn" style="font-family: 'Roboto Mono', monospace; color: #FFFFFF; margin-top: 4rem;">
+
+            <div class="col-sm-6 formDiv1">
+                <h2>Me contate</h2>
+                <p>Estamos online:</p>
+                <p>37660-000, Paraisópolis-MG</p>
+                <p>Celular: (35) 99744-4848</p>
+                <p>Email: contato@programacaodiaria.com.br</p>
             </div>
-            <div class="col-sm-3"></div>
+            <div class="col-sm-6 formDiv2">
+                <h4>Um projeto grande exige um grande profissional.</h4>
+                <h4>Vamos trabalhar</h4>
+                <form action="">
+                    <input type="text" placeholder="Seu Nome"><br>
+                    <input type="text" placeholder="Seu Email"><br>
+                    <input type="text" placeholder="Sua mensagem" style="height: 8rem;"><br>
+                    <input type="submit" value="Enviar">
+                </form>
+            </div>
+
         </div>
 
-        <footer class="text-center" style="color:white; margin-top:50px;">
+        <footer class="text-center col-sm-12" style="color:white; margin-top:50px;">
             <p>Todos os direitos reservados</p>
             <p><b>Termos de privacidade – Todos os direitos reservados – Termos de Uso </br> <time data="2023">2023</time></b></p>
         </footer>
