--- a/src/calcul_nota/pages/calculadora.html
+++ b/src/calcul_nota/pages/calculadora.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="../../shared/header/navbar.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="../style/calcul.css">
     <script src="../js/calcul.js"></script>
 </head>
 <body>
@@ -29,8 +30,12 @@
     <main class="col-sm-12">
 
       <div>
-        <input type="text" id="txtB1" placeholder="1° Bimestre:"><br>
-        <input type="text" id="txtB2" placeholder="2° Bimestre"><br>
+        <input type="number" id="txtB1" placeholder="Nota 1° Bimestre:"><br>
+        <input type="number" id="txtB2" placeholder="Nota 2° Bimestre:"><br>
+        <div>
+          <input type="checkbox" id="chcN2" name="chcN2" />
+          <label for="chcN2">Não tenho a segunda nota</label>
+        </div>
         <button id="btnCalcular">Calcular</button><br>
         <label for="" id="lblResult"></label>
       </div>
